src/app/issues-viewer/card-view/card-view.component.css
* {
  box-sizing: border-box;
}

.card-column {
  padding: 8px;
  /* height: 77vh; */
  display: flex;
  flex-direction: column;

  height: 100%;
}

.card {
  margin: 8px 0px 8px 0px;
}

.mat-card-title {
  display: flex;
  align-items: center;
  font-size: 12px;
  text-align: center;
  overflow: auto;
  word-break: break-word;
}

.column-header .mat-card-title {
  font-size: 14px;
}

.mat-card {
  padding: 10px;
}

.count-margins {
  margin-right: 4px;
}

:host ::ng-deep div.mat-card-header-text {
  margin: 2px;
}

div.column-header .mat-card-title {
  justify-content: center;
  margin: 0;
}

div.column-header {
  justify-content: center;
  position: relative;
  z-index: 5;
}

div.column-header .mat-card-header {
  display: flex;
  align-items: center;
  justify-content: center;
}

.scrollable-container {
  margin-bottom: 2px;
  position: relative;
}

/* Ref: https://lea.verou.me/blog/2012/04/background-attachment-local/ */
.scroll-shadow {
  background:
    /* Shadow covers */ linear-gradient(white 30%, rgba(255, 255, 255, 0)),
    linear-gradient(rgba(255, 255, 255, 0), white 70%) 0 100%,
    /* Shadows */ radial-gradient(50% 0, farthest-side, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)),
    radial-gradient(50% 100%, farthest-side, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)) 0 100%;
  background:
    /* Shadow covers */ linear-gradient(white 30%, rgba(255, 255, 255, 0)),
    linear-gradient(rgba(255, 255, 255, 0), white 70%) 0 100%,
    /* Shadows */ radial-gradient(farthest-side at 50% 0, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0)),
    radial-gradient(farthest-side at 50% 100%, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0)) 0 100%;
  background-repeat: no-repeat;
  background-color: white;
  background-size: 100% 40px, 100% 40px, 100% 14px, 100% 14px;

  /* Opera doesn't support this in the shorthand */
  background-attachment: local, local, scroll, scroll;
}

.scrollable-container::before {
  pointer-events: none;
  content: '';
  position: absolute;
  z-index: 2;
  height: 6px;
  width: 100%;
  display: block;
  background-image: linear-gradient(to bottom, white 66%, transparent);
}

.scrollable-container::after {
  pointer-events: none;
  content: '';
  position: sticky;
  z-index: 2;
  top: 100%;
  height: 6px;
  width: 100%;
  display: block;
  background-image: linear-gradient(to top, white 66%, transparent);
}

.scrollable-container-wrapper {
  position: relative;
  scrollbar-width: none;
  overflow: auto;
  flex-grow: 1;
}

.scrollable-container-wrapper::-webkit-scrollbar {
  display: none;
}

.loading-spinner {
  display: flex;
  justify-content: center;
  align-items: center;
}

.mat-card-subtitle {
  display: flex;
  align-items: center;
  font-size: 11px;
  text-align: left;
  overflow: auto;
  margin: 6px 0;
}

.row-count {
  background-color: rgb(222, 222, 222);
  border-radius: 3px;
  cursor: default;
  padding: 6px 8px 3px 8px;
  color: rgb(0, 0, 0);
  font-weight: 410;
  display: inline-flex;
  font-size: 14px;
  flex-shrink: 0;
  margin-top: 3px;
}

.assignee-container {
  width: 100%;
  text-align: left;
  padding-left: 10px;
}

.milestone-container {
  width: 100%;
}

.assignee-name {
  text-overflow: ellipsis;
}

:host ::ng-deep .pagination-hide-arrow .mat-paginator-navigation-previous {
  display: none !important;
}

:host ::ng-deep .pagination-hide-arrow .mat-paginator-navigation-next {
  display: none !important;
}

:host ::ng-deep .pagination-hide-arrow .mat-paginator-range-actions {
  display: none !important;
}

